--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,8 @@
 <resources>
     <string name="app_name">ToDo Compose</string>
     <string name="add_button">"Add button"</string>
+    <string name="search_action">"Search Tasks"</string>
+    <string name="sort_action">"Filter action"</string>
+    <string name="delete_all_action">Delete all</string>
+
 </resources>
