--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="close_icon">Close action</string>
     <string name="sad_face_icon">Sad face Icon</string>
     <string name="no_tasks_found">No Tasks found.</string>
+    <string name="add_task">Add Task</string>
+    <string name="back_arrow">Back arrow</string>
 
 </resources>
