--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,9 @@
     <string name="no_tasks_found">No Tasks found.</string>
     <string name="add_task">Add Task</string>
     <string name="back_arrow">Back arrow</string>
+    <string name="delete_icon">Delete Icon</string>
+    <string name="update_icon">Update Icon</string>
+
+
 
 </resources>
