feat: created priority dropdown

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="back_arrow">Back arrow</string>
     <string name="delete_icon">Delete Icon</string>
     <string name="update_icon">Update Icon</string>
-
+    <string name="drop_down_arrow">drop down arrow</string>
 
 
 </resources>
