feat: created taskContent in taskScreen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="delete_icon">Delete Icon</string>
     <string name="update_icon">Update Icon</string>
     <string name="drop_down_arrow">drop down arrow</string>
+    <string name="title">Title</string>
+    <string name="description">Description</string>
+
 
 
 </resources>
