feat: added spanish language

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,8 @@
     <string name="description">Description</string>
     <string name="no">No</string>
     <string name="yes">Yes</string>
+    <string name="empty_fields">Fields empty</string>
+
 
     <string name="delete_task">Remove \'%1$s\'?</string>
     <string name="delete_task_confirmation">Are you shure you want to remove \'%1$s\'?</string>
